Fix getPlayers() in TriggerAttachment.